--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 <img class="final-cut" src="logo Program/final-cut.png">
                 <img class="html" src="logo Program/html-5.png">
                 <img class="css" src="logo Program/css.png">
-                <img class="aftereffect" src="logo Program/js.png">
+                <img class="js" src="logo Program/js.png">
+                <img class="react" src="logo Program/react.png">
 
             </div>
             </p>
