--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="aboutMe">
-            <img class="myphoto" src="./Image/Narunkorn.jpg">
+            <img class="myphoto" src="./Image/profile.jpg">
             <div class="introduceAboutMe">
                 <h1 class="head-aboutme">About Me</h1>
                 <p>
