--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <img class="css" src="logo Program/css.png">
                 <img class="js" src="logo Program/js.png">
                 <img class="react" src="logo Program/react.png">
+                <img class="redux" src="logo Program/redux.png">
 
             </div>
             </p>
