--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     come
                     to consult me. Because I'm a good listener.
                 </p>
-                <p>You can contact me at 69/558 Chapter One Modern Duch Rat
+                <p>You can contact me at 69/558 Chapter One Modern Dutch Rat
                     Burana 33,Rat Burana Bangkok. 10140 Tel
                     080-240-3152
                 </p>
@@ -57,15 +57,15 @@
 
 
             <h4><u>2013-2014</u></h4>
-            Comedy-corporation Co.,LTD. Position Editor.Editing Tarok Borupoke and SHe Show Scene.On-air
-            on Chernyim Tv Chanal Freelancer Editing Kroo Tom Son-Thai On-air on New Tv Chanal
+            Comedy-corporation Co.,LTD. Position Editor.Edit Talok Borupoke and She Show Scene.On-air
+            on Chernyim Tv Channel Freelancer Edit Kru Tom Son-Thai On-air on New Tv Channel
             <h4><u>2014-2020</u></h4>
-            Express Entertainment Co.,LTD. Position Editor And Graphic. Editing Sai Trong Luke Tung Show
-            On-air on PPTV and ThaiRut Chanal. Editing Ban Terng Luke Tung On-air on 3SD 28 Chanal
-            Editing Luke Tung Tua Jing Show On-air on GMM 25 Chanal
+            Express Entertainment Co.,LTD. Position Editor And Graphic. Edit Sai Trong Luke Tung Show
+            On-air on PPTV and Thai Rut Channel. Edit Ban Terng Luke Tung On-air on 3SD 28 Channel
+            Edit Luke Tung Tua Jing Show On-air on GMM 25 Channel
 
             <h4><u>2020</u></h4>
-            Freelancer Editing Roo Mai Kai Sod 2020 On-air on ONE31 Tv Chanel
+            Freelancer Edit Roo Mai Kai Sod 2020 On-air on ONE31 Tv Channel
 
             <p>
             <div class="titleSkill">
