--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="aboutMe">
-            <img class="myphoto" src="./Image/profile.jpg">
+            <img class="myphoto" src="./Image/profile2.jpg">
             <div class="introduceAboutMe">
                 <h1 class="head-aboutme">About Me</h1>
                 <p>
@@ -57,7 +57,7 @@
 
 
             <h4><u>2013-2014</u></h4>
-            Comedy-corporation Co.,LTD. Position Editor.Edit Talok Borupoke and She Show Scene.On-air
+            Comedy-corporation Co.,LTD. Position Editor.Edit Talok Boripoke and She Show Scene.On-air
             on Chernyim Tv Channel Freelancer Edit Kru Tom Son-Thai On-air on New Tv Channel
             <h4><u>2014-2020</u></h4>
             Express Entertainment Co.,LTD. Position Editor And Graphic. Edit Sai Trong Luke Tung Show
